Integrate schema-v2 selector across execution adapters