@@ -1,263 +1,84 @@
-// SPDX-FileCopyrightText: 2024-2026 SAP SE or an SAP affiliate company and Smart Test Picker contributors
+// SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Smart Test Picker contributors
 // SPDX-License-Identifier: Apache-2.0
 package com.sap.oss.smarttestpicker.cli;
 
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.List;
-import java.util.Map;
-
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
+import java.nio.file.*;
+import java.time.Instant;
+import java.util.*;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.io.TempDir;
-
-import com.sap.oss.smarttestpicker.mapper.CoverageMap;
-import com.sap.oss.smarttestpicker.mapper.CoverageMapMetadata;
+import com.google.gson.Gson;
+import com.sap.oss.smarttestpicker.coverage.model.*;
+import com.sap.oss.smarttestpicker.coverage.serialization.CoverageMapCodec;
 import com.sap.oss.smarttestpicker.selector.SelectionOutput;
 import picocli.CommandLine;
 
-import static org.junit.jupiter.api.Assertions.*;
+class SelectTestsCommandTest {
+	@TempDir Path temporary;
+	private Path project, map, inventory;
+	private final TestIdentity selected = new TestIdentity("com.example.FooTest", "works", "java.lang.String");
 
-
-class SelectTestsCommandTest
-{
-
-	@TempDir
-	Path tempDir;
-
-	private File projectDir;
-	private File mapFile;
-
-	@BeforeEach
-	void setUp() throws Exception
-	{
-		projectDir = tempDir.resolve("project").toFile();
-		projectDir.mkdirs();
-
-		run("git", "init");
-		run("git", "config", "user.email", "test@test.com");
-		run("git", "config", "user.name", "Test");
-
-		Path srcDir = projectDir.toPath().resolve("src/main/java/org/example");
-		Files.createDirectories(srcDir);
-		Files.writeString(srcDir.resolve("Foo.java"), "package org.example; public class Foo {}");
-		run("git", "add", ".");
-		run("git", "commit", "-m", "initial");
-
-		String commitId = getHeadCommit();
-
-		Files.writeString(srcDir.resolve("Foo.java"), "package org.example; public class Foo { int x; }");
-		run("git", "add", ".");
-		run("git", "commit", "-m", "modify Foo");
-
-		mapFile = writeMapWithCoverage(commitId);
+	@BeforeEach void setUp() throws Exception {
+		project = temporary.resolve("project"); Files.createDirectories(project);
+		run("git", "init", "-q"); run("git", "config", "user.email", "test@example.com"); run("git", "config", "user.name", "Test");
+		write("src/main/java/com/example/Foo.java", "package com.example; class Foo {}"); commit("base");
+		String revision = output("git", "rev-parse", "HEAD");
+		write("src/main/java/com/example/Foo.java", "package com.example; class Foo { int x; }"); commit("change");
+		map = project.resolve("map.json"); Files.write(map, new CoverageMapCodec().serialize(validMap(revision)));
+		inventory = project.resolve("inventory.json"); Files.writeString(inventory, new Gson().toJson(List.of(selected.toString())));
 	}
 
-	@Test
-	void writesJsonOutput() throws IOException
-	{
-		File output = tempDir.resolve("output.json").toFile();
-		int exitCode = runCommand("--format", "json", "--output", output.getAbsolutePath());
-
-		assertEquals(0, exitCode);
-		assertTrue(output.exists());
-
-		String json = Files.readString(output.toPath());
-		SelectionOutput result = new Gson().fromJson(json, SelectionOutput.class);
-		assertEquals("SELECTED", result.getStatus());
-		assertNotNull(result.getSelectedTests());
-		assertTrue(result.getSelectedTests().contains("FooTest#testFoo"));
+	@Test void jsonSelectedContainsCompleteMandatorySet() throws Exception {
+		Path target = temporary.resolve("selected.json"); assertEquals(0, execute(target, "json", map, inventory));
+		SelectionOutput result = new Gson().fromJson(Files.readString(target), SelectionOutput.class);
+		assertEquals("SELECTED", result.getStatus()); assertEquals(List.of(selected.toString()), result.getSelectedTests());
 	}
 
-	@Test
-	void writesTxtOutput() throws IOException
-	{
-		File output = tempDir.resolve("output.txt").toFile();
-		int exitCode = runCommand("--format", "txt", "--output", output.getAbsolutePath());
-
-		assertEquals(0, exitCode);
-		assertTrue(output.exists());
-
-		List<String> lines = Files.readAllLines(output.toPath());
-		assertFalse(lines.isEmpty());
-		assertTrue(lines.contains("FooTest#testFoo"));
+	@Test void jsonNoneIsExactEmpty() throws Exception {
+		String head = output("git", "rev-parse", "HEAD"); Path candidate = project.resolve("none.json");
+		Files.write(candidate, new CoverageMapCodec().serialize(validMap(head)));
+		Path target = temporary.resolve("none-output.json"); assertEquals(0, execute(target, "json", candidate, inventory));
+		SelectionOutput result = new Gson().fromJson(Files.readString(target), SelectionOutput.class);
+		assertEquals("NONE", result.getStatus()); assertEquals(List.of(), result.getSelectedTests());
 	}
 
-	@Test
-	void writesAntOutput() throws IOException
-	{
-		File output = tempDir.resolve("output.ant").toFile();
-		int exitCode = runCommand("--format", "ant", "--output", output.getAbsolutePath());
-
-		assertEquals(0, exitCode);
-		assertTrue(output.exists());
-
-		String content = Files.readString(output.toPath()).trim();
-		assertTrue(content.contains("FooTest"));
-		assertTrue(content.contains("testFoo"));
+	@Test void jsonMissingInventoryAndUnsafeMapFailOpen() throws Exception {
+		Path first = temporary.resolve("missing-inventory.json"); assertEquals(0, execute(first, "json", map, null));
+		assertEquals("FULL_SUITE", new Gson().fromJson(Files.readString(first), SelectionOutput.class).getStatus());
+		Path corrupt = project.resolve("corrupt.json"); Files.writeString(corrupt, "not-json");
+		Path second = temporary.resolve("unsafe.json"); assertEquals(0, execute(second, "json", corrupt, inventory));
+		assertEquals("FULL_SUITE", new Gson().fromJson(Files.readString(second), SelectionOutput.class).getStatus());
 	}
 
-	@Test
-	void antFormatGroupsByClass() throws Exception
-	{
-		String commitId = getHeadCommit();
-
-		Path srcDir = projectDir.toPath().resolve("src/main/java/org/example");
-		Files.writeString(srcDir.resolve("Foo.java"), "package org.example; public class Foo { int x; int y; }");
-		run("git", "add", ".");
-		run("git", "commit", "-m", "modify Foo again");
-
-		CoverageMapMetadata metadata = new CoverageMapMetadata("main", commitId, "2026-04-11T10:00:00Z");
-		Map<String, Map<String, List<String>>> mappings = Map.of(
-				"FooTest#testA", Map.of(
-						"classes", List.of("org.example.Foo"),
-						"methods", List.of("org.example.Foo#methodA")),
-				"FooTest#testB", Map.of(
-						"classes", List.of("org.example.Foo"),
-						"methods", List.of("org.example.Foo#methodB"))
-		);
-		File multiMap = tempDir.resolve("multi-map.json").toFile();
-		try (FileWriter w = new FileWriter(multiMap))
-		{
-			new GsonBuilder().setPrettyPrinting().create().toJson(new CoverageMap(metadata, mappings), w);
-		}
-
-		File output = tempDir.resolve("ant-multi.ant").toFile();
-		int exitCode = new CommandLine(new SelectTestsCommand()).execute(
-				"--map", multiMap.getAbsolutePath(),
-				"--project-dir", projectDir.getAbsolutePath(),
-				"--output", output.getAbsolutePath(),
-				"--format", "ant");
-
-		assertEquals(0, exitCode);
-		String content = Files.readString(output.toPath()).trim();
-		assertTrue(content.contains("FooTest#"));
-		assertTrue(content.contains("+") || content.contains("testA"));
+	@Test void txtIsExplicitAndAntRejectsFullSuite() throws Exception {
+		Path txt = temporary.resolve("all.txt"), ant = temporary.resolve("all.ant");
+		assertEquals(0, execute(txt, "txt", map, null)); assertEquals("FULL_SUITE\n", Files.readString(txt));
+		assertEquals(1, execute(ant, "ant", map, null)); assertFalse(Files.exists(ant));
 	}
 
-	@Test
-	void returnsErrorWhenMapNotFound()
-	{
-		File output = tempDir.resolve("output.json").toFile();
-		int exitCode = new CommandLine(new SelectTestsCommand()).execute(
-				"--map", "/nonexistent/map.json",
-				"--project-dir", projectDir.getAbsolutePath(),
-				"--output", output.getAbsolutePath());
-
-		assertEquals(1, exitCode);
+	@Test void txtAndAntSelectedUseSelectedTestsOnly() throws Exception {
+		Path txt = temporary.resolve("selected.txt"), ant = temporary.resolve("selected.ant");
+		assertEquals(0, execute(txt, "txt", map, inventory)); assertEquals(List.of(selected.toString()), Files.readAllLines(txt));
+		assertEquals(0, execute(ant, "ant", map, inventory)); assertEquals(selected.toString(), Files.readString(ant));
 	}
 
-	@Test
-	void writesNoneStatusWhenNoChanges() throws Exception
-	{
-		String commitId = getHeadCommit();
-		File noChangeMap = writeMap(commitId);
-
-		File output = tempDir.resolve("none-output.json").toFile();
-		int exitCode = new CommandLine(new SelectTestsCommand()).execute(
-				"--map", noChangeMap.getAbsolutePath(),
-				"--project-dir", projectDir.getAbsolutePath(),
-				"--output", output.getAbsolutePath(),
-				"--format", "json");
-
-		assertEquals(0, exitCode);
-		String json = Files.readString(output.toPath());
-		SelectionOutput result = new Gson().fromJson(json, SelectionOutput.class);
-		assertEquals("NONE", result.getStatus());
+	private int execute(Path target, String format, Path candidate, Path headInventory) {
+		ArrayList<String> args = new ArrayList<>(List.of("--map", candidate.toString(), "--project-dir", project.toString(), "--output", target.toString(), "--format", format));
+		if (headInventory != null) args.addAll(List.of("--head-inventory", headInventory.toString()));
+		return new CommandLine(new SelectTestsCommand()).execute(args.toArray(String[]::new));
 	}
 
-	@Test
-	void fullSuiteTriggerForcesFullSuite() throws Exception
-	{
-		String commitId = getHeadCommit();
-
-		Files.writeString(projectDir.toPath().resolve("build.gradle"), "apply plugin: 'java'");
-		run("git", "add", ".");
-		run("git", "commit", "-m", "add build file");
-
-		File triggerMap = writeMap(commitId);
-		File output = tempDir.resolve("trigger-output.json").toFile();
-		int exitCode = new CommandLine(new SelectTestsCommand()).execute(
-				"--map", triggerMap.getAbsolutePath(),
-				"--project-dir", projectDir.getAbsolutePath(),
-				"--output", output.getAbsolutePath(),
-				"--format", "json",
-				"--full-suite-trigger", "build.gradle");
-
-		assertEquals(0, exitCode);
-		String json = Files.readString(output.toPath());
-		SelectionOutput result = new Gson().fromJson(json, SelectionOutput.class);
-		assertEquals("FULL_SUITE", result.getStatus());
+	private CoverageMap validMap(String revision) {
+		ShardId shard = new ShardId("one"); Set<TestIdentity> tests = Set.of(selected);
+		Completeness complete = new Completeness(tests, tests, Set.of(shard), Set.of(shard), Set.of(), Set.of(), Set.of(), Set.of(), Set.of());
+		return new CoverageMap(2, new CoverageMapRevision(revision), Instant.EPOCH, new GeneratorProvenance("test", "test", "test", "17"),
+				Map.of(selected, new TestCoverage(Set.of("com.example.Foo"), Set.of(), TestOutcome.PASS, CollectionStatus.COLLECTED_WITH_COVERAGE)),
+				List.of(), List.of(), complete, new MapStatistics(1, 1, 0, 0, 1, 0), CoverageMapLifecycleState.PUBLISHED, null);
 	}
-
-
-	private int runCommand(String... extraArgs)
-	{
-		String[] baseArgs = new String[]{
-				"--map", mapFile.getAbsolutePath(),
-				"--project-dir", projectDir.getAbsolutePath()
-		};
-		String[] allArgs = new String[baseArgs.length + extraArgs.length];
-		System.arraycopy(baseArgs, 0, allArgs, 0, baseArgs.length);
-		System.arraycopy(extraArgs, 0, allArgs, baseArgs.length, extraArgs.length);
-		return new CommandLine(new SelectTestsCommand()).execute(allArgs);
-	}
-
-	private File writeMapWithCoverage(String commitId) throws IOException
-	{
-		CoverageMapMetadata metadata = new CoverageMapMetadata("main", commitId, "2026-04-11T10:00:00Z");
-		Map<String, Map<String, List<String>>> mappings = Map.of(
-				"FooTest#testFoo", Map.of(
-						"classes", List.of("org.example.Foo"),
-						"methods", List.of("org.example.Foo#doSomething")),
-				"BarTest#testBar", Map.of(
-						"classes", List.of("org.example.Bar"),
-						"methods", List.of("org.example.Bar#process"))
-		);
-		return writeMapToFile(new CoverageMap(metadata, mappings));
-	}
-
-	private File writeMap(String commitId) throws IOException
-	{
-		CoverageMapMetadata metadata = new CoverageMapMetadata("main", commitId, "2026-04-11T10:00:00Z");
-		return writeMapToFile(new CoverageMap(metadata, Map.of()));
-	}
-
-	private File writeMapToFile(CoverageMap map) throws IOException
-	{
-		File file = tempDir.resolve("test-map-" + System.nanoTime() + ".json").toFile();
-		try (FileWriter writer = new FileWriter(file))
-		{
-			new GsonBuilder().setPrettyPrinting().create().toJson(map, writer);
-		}
-		return file;
-	}
-
-	private String getHeadCommit() throws IOException, InterruptedException
-	{
-		ProcessBuilder pb = new ProcessBuilder("git", "rev-parse", "HEAD");
-		pb.directory(projectDir);
-		Process p = pb.start();
-		String sha = new String(p.getInputStream().readAllBytes()).trim();
-		p.waitFor();
-		return sha;
-	}
-
-	private void run(String... args) throws IOException, InterruptedException
-	{
-		ProcessBuilder pb = new ProcessBuilder(args);
-		pb.directory(projectDir);
-		pb.redirectErrorStream(true);
-		Process p = pb.start();
-		p.getInputStream().readAllBytes();
-		int exit = p.waitFor();
-		if (exit != 0)
-			throw new RuntimeException("Command failed: " + String.join(" ", args));
-	}
+	private void write(String relative, String value) throws Exception { Path path = project.resolve(relative); Files.createDirectories(path.getParent()); Files.writeString(path, value); }
+	private void commit(String message) throws Exception { run("git", "add", "."); run("git", "commit", "-q", "-m", message); }
+	private String output(String... command) throws Exception { return process(command); }
+	private void run(String... command) throws Exception { process(command); }
+	private String process(String... command) throws Exception { Process process = new ProcessBuilder(command).directory(project.toFile()).redirectErrorStream(true).start(); String text = new String(process.getInputStream().readAllBytes()).trim(); if (process.waitFor() != 0) throw new AssertionError(String.join(" ", command) + ": " + text); return text; }
 }
